[package]
name = "glhf"
version = "0.1.0"
authors = ["James Munns <james.munns@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"

reqwest = "0.8.5"
error-chain = "0.11.0"
toml = "0.4.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4.1"
env_logger = "0.5.6"